we have 6 cat now, tho the amount is extremely unbalanced

--- a/PLURK/04_use_selenium.ipynb
+++ b/PLURK/04_use_selenium.ipynb
@@ -1333,6 +1333,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7508"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dd = Path(\"stable_pkl\")\n",
+    "with open(Path(dd/\"joy_.pkl\"), \"wb\") as f:\n",
+    "    pickle.dump(content_arr[key], f)\n",
+    "\n",
+    "\n",
+    "with open(Path(dd/\"joy_.pkl\"), \"rb\") as f:\n",
+    "    t = pickle.load(f)\n",
+    "\n",
+    "len(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'少女漫画の実写化でヒーロー役を演じてほしい俳優ランキング！ 3位「横浜流星」、2位「佐藤健」、1位は？（...\\n為什麼不放第一名的照片😂😂 '"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
